1_service.yml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  name: xx-xx-xx
spec:
  type: ClusterIP
  ports:
  - name: http
    port: 9999
    targetPort: 9999
  selector:
    app: xx-xx-xx
