2_ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: xx-xx-ingress
spec:
  rules:
  - host: localhost  # 使用您的域名
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: xx-xx-xx  # 服务名称
            port:
              number: 9999               # 服务的端口
